--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
       <artifactId>spring-security-core</artifactId>
       <version>6.4.4</version>
     </dependency>
+    <!--    password hashing    -->
+    <dependency>
+      <groupId>org.mindrot</groupId>
+      <artifactId>jbcrypt</artifactId>
+      <version>0.4</version>
+    </dependency>
     <!-- Hibernate Validator (implementation of Jakarta Validation API) -->
     <dependency>
       <groupId>org.springframework.security</groupId>
