--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
       <version>2.3.232</version>
       <scope>runtime</scope>
     </dependency>
+    <!-- SQLite database   -->
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.45.2.0</version>
+    </dependency>
+
     <!-- Jakarta Bean Validation API -->
     <dependency>
       <groupId>jakarta.validation</groupId>
