--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 db.driver=org.sqlite.JDBC
-db.url=jdbc:sqlite:/data/userdb.db
-db.dir=data/
-db.path=${db.dir}userdb.db
+db.dir=data
+db.path=${db.dir}/userdb.db
+db.url=jdbc:sqlite:/${db.path}
 db.schema=schema.sql
